app/assets/stylesheets/_plan_board.scss
.plan-canvas {
  position: relative;
  flex-grow: 1;
}

#plan-board {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  white-space: nowrap;
  margin-bottom: $plan-board-mrg-btm;
  padding-bottom: $plan-board-pdg-btm;
  overflow: hidden; // (To sidescroll) overflow-x: auto; overflow-y: hidden;
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}
ul.connectedSortable {
  list-style-type: none;
  padding: 0;
  margin: 0;
  min-height: 20px;
}

.inbox-wrapper {
  width: $inbox-wrapper-wdt;
  margin: $inbox-wrapper-mgn;
  height: 100%;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: top;
  white-space: normal;
  .task-position {
    display: none;
  }
  .task-priority {
    display: none;
  }
}
.position-wrapper {
  position: absolute;
  left: $position-wrapper-abs-left;
  right: 0;
  min-width: 270px;
  margin: $position-wrapper-mgn;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: top;
  white-space: normal;
  .task-position {
    display: block;
  }
  li.task-row {
    display: flex;
    .task-position {
      flex: 0 0 auto;
      line-height: 18px;
      font-size: 14px;
      padding-top: 5px;
      padding-left: 2px;
      padding-right: 8px;
      margin-bottom: 6px;
    }
    .task {
      flex: 1 1 auto;
    }
  }
}

.plan-list-content {
  background: $inbox-bg-clr;
  border-radius: $inbox-list-bdr-rds;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  max-height: 100%;
  position: relative;
  .plan-list-head {
    flex: 0 0 auto;
    padding: $inbox-list-hd-pdg;
    position: relative;
    min-height: $inbox-list-hd-txt-min-ht;
    .plan-list-head-text {
      display: inline;
      font-size: $inbox-list-hd-txt-ft-sz;
      line-height: $inbox-list-hd-txt-ln-ht;
      margin: 0;
      min-height: $inbox-list-hd-txt-min-ht;
      min-width: 30px;
      overflow: hidden;
      text-overflow: ellipsis;
      word-wrap: break-word;
      font-weight: bold;
      font-family: $helv-neue;
    }
  }
  .list-tasks {
    flex: 1 1 auto;
    overflow-y: auto;
    overflow-x: hidden;
    margin: $list-tasks-mgn;
    padding: 0 4px;
    z-index: $list-tasks-pdg;
    .task {
      background-color: $task-bg-clr;
      border-bottom: $task-bdr-btm;
      border-top-left-radius: $inbox-task-bdr-rds;
      border-bottom-left-radius: $inbox-task-bdr-rds;
      cursor: pointer;
      margin-bottom: $task-mgn-btm;
      min-height: $task-min-ht;
      position: relative;
      z-index: 0;
      .task-details {
        overflow: auto;
        padding: 6px 8px 4px;
        position: relative;
        max-height: 162px;
        z-index: 10;
        .task-details-title {
          // tbd
        }
      }
    }
    .task-priority {
      background-color: $task-bg-clr;
      &.priority-level-1 {
        background: rgba(0, 0, 0, 0.05);
        color: white;
        font-weight: bold;
      }
      &.priority-level-2 {
        background: rgba(0, 0, 0, 0.25);
        color: white;
        font-weight: bold;
      }
      &.priority-level-3 {
        background: rgba(0, 0, 0, 0.45);
        color: white;
        font-weight: bold;
      }
      &.priority-level-4 {
        background: rgba(0, 0, 0, 0.65);
        color: white;
        font-weight: bold;
      }
      &.priority-level-5 {
        background: rgba(0, 0, 0, 0.85);
        color: white;
        font-weight: bold;
      }
      border-bottom: $task-bdr-btm;
      cursor: pointer;
      margin-bottom: $task-mgn-btm;
      min-height: $task-min-ht;
      position: relative;
      z-index: 0;
      align-self: stretch;
      border-top-right-radius: $inbox-task-bdr-rds;
      border-bottom-right-radius: $inbox-task-bdr-rds;
      .task-priority-details {
        overflow: auto;
        padding: 4px 8px;
        margin: auto;
        position: relative;
        max-height: 162px;
        z-index: 10;
      }
    }
  }
  .task-composer {
    padding-bottom: 8px;
      overflow: hidden;
    .task-details {
      overflow: hidden;
        textarea {
        border: none;
        margin-bottom: 4px;
        height: 100px;
        padding: 0;
        width: 100%;
        resize: none;
        outline: none;
      }
    }
    .fa-times.js-cancel {
      font-size: 30px;
      vertical-align: middle;
      padding-left: 5px;
      color: #999999;
    }
  }

  .open-task-composer {
    border-radius: $open-task-composer-bdr-rds;
    color: $open-task-composer-clr;
    display: block;
    flex: 0 0 auto;
    padding: $open-task-composer-pdg;
    position: relative;
    text-decoration: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    &:hover {
      background-color: $open-task-composer-hvr-bg-clr;
      color: $open-task-composer-hvr-clr;
      text-decoration: underline;
    }
  }
}

